# MouseIA

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CHANGELOG_v0.2.md  CONTRIBUTING.md  LICENSE  PROMPT.md  README.md  ROADMAP.md  SECURITY.md  SIGNALS.md
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0f9a46dddd24_add_audit_log_and_webhook_tables.py  20260716_create_findings_table.py  20260716_create_signals_table.py  20260716_create_sites_table.py  20260716_create_users_table.py  257167865ef7_v0_2_architectural_migration.py  615f76e823e4_create_remaining_tables.py  73c90acd108a_add_risk_score_to_vulnerabilities.py  dc3271fdaa6d_add_cve_intelligence_table.py  dd1a9cd80738_add_finding_id_to_signals.py
backend/app/: main.py
backend/app/api/: assets.py  audit_logs.py  auth.py  companies.py  dashboard.py  dependencies.py  findings.py  organizations.py  projects.py  recommendations.py  scans.py  signals.py  sites.py  users.py  vulnerabilities.py  webhooks.py
backend/app/core/: security.py  settings.py
backend/app/database/: mixins.py  session.py
backend/app/models/: __init__.py  (+15 more)
backend/tests/: conftest.py  test_ai_service.py  test_assets_scans.py  test_audit.py  test_auth.py  test_auth_protected.py  test_authorization.py  test_companies.py  test_correlation_engine.py  test_findings.py  test_jwt.py  test_main.py  test_organizations.py  test_projects.py  test_projects_auth.py  test_reporting.py  test_signals.py  test_sites.py  test_sites_auth.py  test_users.py  test_vulnerabilities_recs.py  test_webhooks.py
(+103 files in other folders)
